# powdr

./: 404.html  Cargo.toml  hello_world.html  index.html  installation.html  print.html  searchindex.js  searchindex.json
.github/workflows/: deploy-book.yml  nightly-tests.yml
architecture/: compiler.html  index.html  linker.html
asm/: expressions.html  functions.html  index.html  instructions.html  links.html  machines.html  modules.html  operations.html  registers.html
ast/src/analyzed/: display.rs  mod.rs
ast/src/parsed/: display.rs  mod.rs  visitor.rs
backends/: estark.html  halo2.html  index.html
bberg/: avm-mini.asm  avm-mini.pil  avm-mini2.asm  avm-mini2.pil  avm-mini2_opt.pil  avm-mini_opt.pil
bberg/src/: circuit_builder.rs  composer_builder.rs  flavor_builder.rs  lib.rs  lookup_builder.rs  permutation_builder.rs  prover_builder.rs  relation_builder.rs  trace_builder.rs  utils.rs  verifier_builder.rs  vm_builder.rs
cli/: index.html
compiler/src/: lib.rs
compiler/tests/: asm.rs  pil.rs  powdr_std.rs
frontends/: evm.html  index.html  riscv.html  valida.html
parser/src/: lib.rs  powdr.lalrpop  test_utils.rs
pil/: fixed_columns.html  index.html  macros.html
pil-analyzer/src/: condenser.rs  evaluator.rs  pil_analyzer.rs  statement_processor.rs
pil_analyzer/src/: statement_processor.rs
src/analyzer/: pil_analyzer.rs
src/constant_evaluator/: mod.rs
src/halo2/: circuit_builder.rs  circuit_data.rs  mock_prover.rs
src/parser/: ast.rs  display.rs  powdr.lalrpop
src/riscv/: compiler.rs  mod.rs
type_check/src/: lib.rs
(+1 files in other folders)
