[workspace]

resolver = "2"

members = [
    "number",
    "parser",
    "parser-util",
    "pil-analyzer",
    "ast",
]

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2021"
license = "MIT"
homepage = "https://powdr.org"
repository = "https://github.com/powdr-labs/powdr"

[workspace.dependencies]
# workspace crates
powdr-ast = { path = "./ast", version = "0.1.0-alpha.2" }
powdr-number = { path = "./number", version = "0.1.0-alpha.2" }
powdr-parser = { path = "./parser", version = "0.1.0-alpha.2" }
powdr-parser-util = { path = "./parser-util", version = "0.1.0-alpha.2" }
powdr-pil-analyzer = { path = "./pil-analyzer", version = "0.1.0-alpha.2" }

[profile.pr-tests]
inherits = "dev"
opt-level = 3
debug = "line-tables-only"
debug-assertions = true
overflow-checks = true
panic = 'unwind'
incremental = true         # This is true because target is cached
codegen-units = 256

[profile.release-with-debug]
inherits = "release"
debug = true